--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <button type="button" class="text-box">Explore Now</button>
 
                 <div class="feature-img-container">
-                    <img alt="model" src="model2.jpg" class="feature-img">
-                    <img alt="model hover" src="GHGHH.jpg" class="feature-img-hover">
+                    <img alt="model" src="/model2.jpg" class="feature-img">
+                    <img alt="model hover" src="/GHGHH.jpg" class="feature-img-hover">
                 </div>
 
             </div>
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="service-box">
-                    <img src="IMG_9339.JPG">
+                    <img src="/IMG_9339.JPG">
                     <div class="texts">
                         <h4>Joggers</h4>
                         <p>#23,000</p>
@@ -79,7 +79,7 @@
 
             <div class="col-md-4">
                 <div class="service-box">
-                    <img src="SDSDSSDF.jpg">
+                    <img src="/SDSDSSDF.jpg">
                     <div class="texts">
                         <h4>Sweatshirt</h4>
                         <p>#23,000</p>
@@ -93,7 +93,7 @@
 
             <div class="col-md-4">
                 <div class="service-box">
-                    <img src="etsy.jpg">
+                    <img src="/etsy.jpg">
                     <div class="texts">
                         <h4>Hoodies</h4>
                         <p>#23,000</p>
@@ -120,7 +120,7 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <img src="ashluxe22_540x.webp">
+                    <img src="/ashluxe22_540x.webp">
                     <div class="text">
                         <h4 id="s1">LET LOVE LEAD S1</h4>
 
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img src="color.jpg" id="left-pic">
+                    <img src="/color.jpg" id="left-pic">
                     <div class="text">
                         <h4>KOLORBLOCK </h4>
 
@@ -188,7 +188,7 @@
         <div class="row">
             <!-- First column, first row -->
             <div class="col">
-                <img src="paase ng  WHITE.png" class="logo">
+                <img src="/paase ng  WHITE.png" class="logo">
                 <p id="p">The goals of the Open Font License (OFL) are
                     to stimulate worldwide<br> development of collaborative
                     font projects, to support the font creation<br> efforts of
